# hal16

./: README.md
lambdamon-dll/: ChangeLog.md  LICENSE  Makefile  MakefileStackGHC  lambdamon-dll.cabal  stack.yaml
lambdamon-dll/src/: Optimal.hs  Version.hs
lambdamon-exe/: lambdamon-exe.cabal  stack.yaml
lambdamon-exe/src/: Main.hs  PluginLoaders.hs
lambdamon-hint/: Optimal.hs  Plugin.hs
lambdamon-lua/: optimal.lua  simple.lua
lambdamon-types/: lambdamon-types.cabal
lambdamon-types/src/: Paths.hs  Types.hs
lua/: lua.cabal  stack.yaml
lua/app/: Main.hs
