name:                lambdamon-exe
version:             0.1.0.0
synopsis:            Executable part loading plugins
description:         Please see README.md
homepage:            https://github.com/sgraf812/hal#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2015 Sebastian Graf
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable lambdamon-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       PluginLoaders
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambdamon-types
                     , vty
                     , brick
                     , microlens-platform
                     , transformers
                     , random
                     , data-default
                     , extra
                     , hslua <= 0.5
                     , hint
                     , dynamic-loader
                     , plugins
                     , directory
                     , concurrent-extra
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgraf812/hal
