name:                lambdamon-types
version:             0.1.0.0
synopsis:            Defines types for the plugin architecture of lambdamon-exe
description:         Please see README.md
homepage:            https://github.com/sgraf812/hal#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2015 Sebastian Graf
category:            Development
build-type:          Simple
data-files:          src/Types.hs
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types, Paths
  other-modules:       Paths_lambdamon_types
  build-depends:       base >= 4.7 && < 5
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgraf812/hal
